[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scripts/Multiplayer/MultiplayerServerscreen/MultiplayerScreen.gd" type="Script" id=1]
[ext_resource path="res://Image/Titlescreen/Title.png" type="Texture" id=2]
[ext_resource path="res://Resource/20_FontRessource.tres" type="DynamicFont" id=3]
[ext_resource path="res://Image/MultiplayerServerscreen/ServerDisconnected.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Multiplayer/MultiplayerServerscreen/BackButton.gd" type="Script" id=5]
[ext_resource path="res://Image/2DEffect.png" type="Texture" id=6]
[ext_resource path="res://Resource/16_FontRessource.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scripts/Multiplayer/MultiplayerServerscreen/CreateOnlineGameButton.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Multiplayer/MultiplayerServerscreen/CancelOnlineGameButton.gd" type="Script" id=9]

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 0.0
content_margin_bottom = 5.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
expand_margin_top = 10.0

[sub_resource type="StyleBoxFlat" id=66]

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 0.0
content_margin_bottom = 5.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
expand_margin_top = 5.0

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0 )
border_width_top = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=62]

[sub_resource type="StyleBoxEmpty" id=63]

[sub_resource type="StyleBoxEmpty" id=64]

[sub_resource type="StyleBoxEmpty" id=65]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="CanvasItemMaterial" id=59]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 7
particles_anim_loop = false

[sub_resource type="Gradient" id=60]
colors = PoolColorArray( 0.299522, 0.450111, 0.923828, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=58]
gradient = SubResource( 60 )

[sub_resource type="ParticlesMaterial" id=61]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 58 )
anim_speed = 1.0

[node name="MultiplayerScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Hud" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 810 )
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Hud"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TitleRect" type="TextureRect" parent="Hud/VBoxContainer"]
margin_left = 606.0
margin_right = 834.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
size_flags_horizontal = 6
texture = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="Hud/VBoxContainer"]
margin_top = 124.0
margin_right = 1440.0
margin_bottom = 726.0
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="Hud/VBoxContainer/HBoxContainer"]
margin_right = 1440.0
margin_bottom = 602.0
size_flags_horizontal = 3
custom_styles/tab_fg = SubResource( 6 )
custom_styles/tab_disabled = SubResource( 66 )
custom_styles/tab_bg = SubResource( 7 )
custom_styles/panel = SubResource( 1 )
tab_align = 0

[node name="Spiel hosten" type="Tabs" parent="Hud/VBoxContainer/HBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 21.0
margin_bottom = -2.0

[node name="HBoxContainer" type="HBoxContainer" parent="Hud/VBoxContainer/HBoxContainer/TabContainer/Spiel hosten"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Hud/VBoxContainer/HBoxContainer/TabContainer/Spiel hosten/HBoxContainer"]
margin_left = 620.0
margin_right = 820.0
margin_bottom = 579.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Hud/VBoxContainer/HBoxContainer/TabContainer/Spiel hosten/HBoxContainer/VBoxContainer"]
margin_top = 224.0
margin_right = 200.0
margin_bottom = 264.0
rect_min_size = Vector2( 200, 40 )

[node name="NameLineEdit" type="LineEdit" parent="Hud/VBoxContainer/HBoxContainer/TabContainer/Spiel hosten/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 0
placeholder_text = "Raumname"

[node name="HBoxContainer2" type="HBoxContainer" parent="Hud/VBoxContainer/HBoxContainer/TabContainer/Spiel hosten/HBoxContainer/VBoxContainer"]
margin_top = 268.0
margin_right = 200.0
margin_bottom = 328.0
rect_min_size = Vector2( 0, 60 )

[node name="PasswordLineEdit" type="LineEdit" parent="Hud/VBoxContainer/HBoxContainer/TabContainer/Spiel hosten/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 200.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 0
placeholder_text = "Passwort"

[node name="CreateOnlineGameButton" type="Button" parent="Hud/VBoxContainer/HBoxContainer/TabContainer/Spiel hosten/HBoxContainer/VBoxContainer"]
margin_top = 332.0
margin_right = 200.0
margin_bottom = 354.0
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = SubResource( 62 )
custom_styles/pressed = SubResource( 63 )
custom_styles/focus = SubResource( 64 )
custom_styles/normal = SubResource( 65 )
text = "Spiel erstellen"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelOnlineGameButton" type="Button" parent="Hud/VBoxContainer/HBoxContainer/TabContainer/Spiel hosten/HBoxContainer/VBoxContainer"]
visible = false
margin_top = 344.0
margin_right = 200.0
margin_bottom = 366.0
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = SubResource( 62 )
custom_styles/pressed = SubResource( 63 )
custom_styles/focus = SubResource( 64 )
custom_styles/normal = SubResource( 65 )
text = "Abbrechen"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spiel beitreten" type="Tabs" parent="Hud/VBoxContainer/HBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 21.0
margin_bottom = -2.0

[node name="ScrollContainer" type="ScrollContainer" parent="Hud/VBoxContainer/HBoxContainer/TabContainer/Spiel beitreten"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Hud/VBoxContainer/HBoxContainer/TabContainer/Spiel beitreten/ScrollContainer"]
margin_right = 1440.0
margin_bottom = 579.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Hud/VBoxContainer"]
margin_top = 730.0
margin_right = 1440.0
margin_bottom = 810.0
rect_min_size = Vector2( 0, 80 )
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Hud/VBoxContainer/HBoxContainer2"]
margin_right = 718.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Hud/VBoxContainer/HBoxContainer2/HBoxContainer"]
margin_right = 150.0
margin_bottom = 80.0
rect_min_size = Vector2( 150, 0 )
alignment = 1

[node name="BackButton" type="Button" parent="Hud/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 150.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Zur√ºck"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="Hud/VBoxContainer/HBoxContainer2"]
margin_left = 722.0
margin_right = 1440.0
margin_bottom = 80.0
size_flags_horizontal = 3
alignment = 2

[node name="ServerTextureRect" type="TextureRect" parent="Hud/VBoxContainer/HBoxContainer2/HBoxContainer2"]
margin_left = 544.0
margin_top = 30.0
margin_right = 564.0
margin_bottom = 50.0
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource( 4 )

[node name="ServerConnectionLabel" type="Label" parent="Hud/VBoxContainer/HBoxContainer2/HBoxContainer2"]
margin_left = 568.0
margin_top = 25.0
margin_right = 718.0
margin_bottom = 55.0
rect_min_size = Vector2( 150, 30 )
custom_fonts/font = ExtResource( 3 )
text = "Getrennt"
align = 1

[node name="Particles2D" type="Particles2D" parent="."]
visible = false
material = SubResource( 59 )
position = Vector2( 620, 148 )
amount = 25
lifetime = 4.0
preprocess = 5.0
process_material = SubResource( 61 )
texture = ExtResource( 6 )

[connection signal="pressed" from="Hud/VBoxContainer/HBoxContainer/TabContainer/Spiel hosten/HBoxContainer/VBoxContainer/CreateOnlineGameButton" to="Hud/VBoxContainer/HBoxContainer/TabContainer/Spiel hosten/HBoxContainer/VBoxContainer/CreateOnlineGameButton" method="_on_CreateOnlineGameButton_pressed"]
[connection signal="pressed" from="Hud/VBoxContainer/HBoxContainer/TabContainer/Spiel hosten/HBoxContainer/VBoxContainer/CancelOnlineGameButton" to="Hud/VBoxContainer/HBoxContainer/TabContainer/Spiel hosten/HBoxContainer/VBoxContainer/CancelOnlineGameButton" method="_on_CancelOnlineGameButton_pressed"]
[connection signal="mouse_entered" from="Hud/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer/BackButton" to="Hud/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer/BackButton" method="_on_BackButton_mouse_entered"]
[connection signal="pressed" from="Hud/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer/BackButton" to="Hud/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer/BackButton" method="_on_BackButton_pressed"]
